--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   node-app:
     container_name: node-app-container
+    image: moatadil/test-node-app
     ports:
       - "4000:4000"
     env_file:
